# qemu-libafl-bridge

./: .gitignore  README.md  block.c  configure  cpu-target.c  cpu.c  gdbstub.c  hmp-commands.hx  linker_interceptor++.py  linker_interceptor.py  meson.build  meson_options.txt
.github/setup_self_hosted/: README.md  ubuntu.sh
.github/workflows/: build_and_test.yaml
accel/kvm/: kvm-accel-ops.c  kvm-all.c
accel/tcg/: cpu-exec.c  cputlb.c  internal-common.h  tb-maint.c  tcg-accel-ops-mttcg.c  tcg-accel-ops-rr.c  tcg-all.c  tcg-runtime.c  tcg-runtime.h  translate-all.c  translator.c  user-exec.c
block/: block-backend.c
contrib/plugins/: lockstep.c
gdbstub/: gdbstub.c  internals.h  softmmu.c  system.c  user-target.c
hw/: meson.build
hw/arm/: Kconfig  armv7m_machine.c  armv7m_soc.c  meson.build
hw/core/: cpu-system.c
hw/isa/: lpc_ich9.c
hw/libafl/: configurable_machine.c  meson.build
include/block/: block-common.h
include/exec/: cpu-all.h  cpu-defs.h  cputlb.h  exec-all.h  helper-gen-common.h  helper-proto-common.h  page-protection.h  ram_addr.h  ramblock.h  translation-block.h
include/hw/arm/: armv7m_soc.h
include/hw/core/: sysemu-cpu-ops.h
include/io/: channel-buffer.h
include/libafl/: cpu.h  defs.h  exit.h  gdb.h  hook.h  jit.h  qemu_snapshot.h  system.h  syx-misc.h  tcg-helper.h  tcg.h  user.h  utils.h
include/libafl/hooks/: cpu_run.h  syscall.h  thread.h
include/libafl/hooks/tcg/: backdoor.h  block.h  cmp.h  edge.h  instruction.h  read_write.h
include/libafl/syx-snapshot/: channel-buffer-writeback.h  device-save.h  syx-cow-cache.h  syx-snapshot.h
include/monitor/: hmp.h
include/qemu/: iov.h  osdep.h
include/sysemu/: block-backend-global-state.h  block-backend-io.h  cpus.h  runstate.h
include/system/: block-backend-global-state.h  block-backend-io.h  ramblock.h  runstate.h
include/tcg/: tcg-op.h
include/user/: cpu_loop.h  page-protection.h
io/: channel-buffer.c
libafl/: .clang-format  blkdev.c  cpu.c  exit.c  gdb.c  hook.c  jit.c  meson.build  qemu_snapshot.c  system.c  tcg-helper.c  tcg.c  user.c  utils.c
libafl/hooks/: cpu_run.c  syscall.c  thread.c
libafl/hooks/tcg/: backdoor.c  block.c  cmp.c  edge.c  instruction.c  read_write.c
libafl/syx-snapshot/: channel-buffer-writeback.c  device-save.c  meson.build  syx-cow-cache.c  syx-hmp.c  syx-snapshot-hmp.c  syx-snapshot-wrap.c  syx-snapshot.c
libafl_extras/: exit.c  exit.h  hook.c  hook.h  jit.c  jit.h  meson.build  syx-misc.h
libafl_extras/syx-snapshot/: channel-buffer-writeback.h  device-save.c  device-save.h  qemu-file-ram.c  qemu-file-ram.h  syx-cow-cache.h  syx-snapshot.c  syx-snapshot.h
linux-user/: cpu_loop-common.h  elfload.c  main.c  mmap.c  signal.c  strace.c  syscall.c  user-internals.h
linux-user/aarch64/: cpu_loop.c
linux-user/arm/: cpu_loop.c
linux-user/hexagon/: cpu_loop.c
linux-user/i386/: cpu_loop.c
linux-user/mips/: cpu_loop.c
linux-user/ppc/: cpu_loop.c
linux-user/riscv/: cpu_loop.c
migration/: migration.c  savevm.c  savevm.h
qapi/: block-core.json  run-state.json
qemu_libafl_bridge/: Cargo.toml
qemu_libafl_bridge/src/: amd64.rs  lib.rs  weaks.c  x86.rs
scripts/: libafl-format.sh  meson-buildoptions.sh
softmmu/: cpus.c  main.c  runstate.c  vl.c
subprojects/libvduse/: meson.build
subprojects/libvhost-user/: meson.build
system/: cpus.c  main.c  physmem.c  runstate.c  vl.c
tcg/: tcg-op-ldst.c  tcg-op-vec.c  tcg-op.c  tcg.c
util/: iov.c
